welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: unclosed quoted identifier
}`
 ^Program:19: error: Unmatched closing brace '}' ignored here
}
^